--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title><!Page Body></title>
+<title>Git commands test</title>
 </head>
 <body>
-
+<h1>First Test with GIT Commands</h1>
 
 </body>
 </html>
